--- a/coverter.html
+++ b/coverter.html
@@ -27,6 +27,6 @@
     </form>
     <div id="result"></div>
   </div>
-  <script src="script.js"></script>
+  <script src="converter.js"></script>
 </body>
 </html>
